@@ -4,6 +4,7 @@ import com.server.api.management.entity.Employe;
 import com.server.api.management.entity.Entreprise;
 import com.server.api.management.enums.ContractType;
 import com.server.api.management.exception.ResourceNotFoundException;
+import com.server.api.management.exception.ValidationException;
 import com.server.api.management.repository.EmployeRepository;
 import com.server.api.management.repository.EntrepriseRepository;
 import com.server.api.management.service.impl.EmployeServiceImpl;
@@ -15,10 +16,12 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
+import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -35,12 +38,18 @@ class EmployeServiceImplTest {
     private EntrepriseRepository entrepriseRepository;
 
     private Employe employe;
+
     private Entreprise entreprise;
 
     @BeforeEach
     void setUp() {
         entreprise = new Entreprise();
         entreprise.setId(1L);
+        entreprise.setAddress("123 Street");
+        entreprise.setSiren("123456789");
+        entreprise.setSiret("12345678900011");
+        entreprise.setSocialReason("SOPRA STERIA");
+        entreprise.setCreatedAt(new Date());
 
         employe = new Employe();
         employe.setId(1L);
@@ -52,100 +61,119 @@ class EmployeServiceImplTest {
     }
 
     @Test
-    void testGetEmployeById_found() {
+    void testGetEmployeByIdSuccess() {
         when(employeRepository.findById(1L)).thenReturn(Optional.of(employe));
-
         Employe result = employeService.getEmployeById(1L);
-
         assertNotNull(result);
         assertEquals("John", result.getFirstName());
     }
 
     @Test
-    void testGetEmployeById_notFound() {
+    void testGetEmployeByIdNotFound() {
         when(employeRepository.findById(1L)).thenReturn(Optional.empty());
-
         assertThrows(ResourceNotFoundException.class, () -> employeService.getEmployeById(1L));
     }
 
     @Test
     void testGetAllEmployes() {
         when(employeRepository.findAll()).thenReturn(List.of(employe));
-
         List<Employe> result = employeService.getAllEmployes();
-
         assertEquals(1, result.size());
     }
 
     @Test
     void testGetEmployesByEntrepriseId() {
         when(employeRepository.findAllByEntrepriseId(1L)).thenReturn(List.of(employe));
-
         List<Employe> result = employeService.getEmployesByEntrepriseId(1L);
-
         assertEquals(1, result.size());
-        assertEquals("John", result.get(0).getFirstName());
+        assertEquals("John", result.getFirst().getFirstName());
     }
 
     @Test
-    void testUpdateEmploye_notFoundEntreprise() {
-        when(entrepriseRepository.existsById(1L)).thenReturn(false);
+    void testUpdateEmployeSuccess() {
+        employe.setContractType(ContractType.CDI);
 
-        assertThrows(ResourceNotFoundException.class,
-                () -> employeService.updateEmploye(1L, employe));
+        when(employeRepository.findById(1L)).thenReturn(Optional.of(employe));
+        when(entrepriseRepository.existsById(1L)).thenReturn(true);
+        when(employeRepository.save(any())).thenReturn(employe);
+
+        Employe updated = new Employe();
+        updated.setId(1L);
+        updated.setContractType(ContractType.CDI);
+        updated.setFirstName("Jane");
+        updated.setLastName("Smith");
+        updated.setSalary(BigDecimal.valueOf(3500));
+        updated.setEntreprise(entreprise);
+
+        Employe result = employeService.updateEmploye(1L, updated);
+        assertNotNull(result);
+        assertEquals("Jane", result.getFirstName());
     }
 
     @Test
-    void testDeleteEmploye_success() {
+    void testUpdateEmployeInvalidContractType() {
+        Employe old = new Employe();
+        old.setId(1L);
+        old.setContractType(ContractType.CDI);
+        old.setSalary(BigDecimal.valueOf(3000));
+
+        Employe update = new Employe();
+        update.setId(1L);
+        update.setContractType(ContractType.ALTERNANCE);
+        update.setSalary(BigDecimal.valueOf(3000));
+        update.setEntreprise(entreprise);
+
+        when(employeRepository.findById(1L)).thenReturn(Optional.of(old));
+        when(entrepriseRepository.existsById(1L)).thenReturn(true);
+
+        assertThrows(ValidationException.class, () -> employeService.updateEmploye(1L, update));
+    }
+
+    @Test
+    void testDeleteEmployeSuccess() {
         when(employeRepository.findByIdAndEntrepriseId(1L, 1L)).thenReturn(Optional.of(employe));
-
         Employe result = employeService.deleteEmploye(1L, 1L);
-
         assertNotNull(result);
         verify(employeRepository).delete(employe);
     }
 
     @Test
-    void testDeleteEmploye_notFound() {
+    void testDeleteEmployeNotFound() {
         when(employeRepository.findByIdAndEntrepriseId(1L, 1L)).thenReturn(Optional.empty());
-
-        assertThrows(ResourceNotFoundException.class,
-                () -> employeService.deleteEmploye(1L, 1L));
+        assertThrows(ResourceNotFoundException.class, () -> employeService.deleteEmploye(1L, 1L));
     }
 
     @Test
-    void testGetSalaryByEntrepriseIdAndContractType_min() {
-        when(employeRepository.min(1L, "CDI")).thenReturn(BigDecimal.valueOf(2000));
-
-        BigDecimal salary = employeService.getSalaryByEntrepriseIdAndContractType(1L, "CDI", "min");
-
+    void testGetSalaryByEntrepriseIdAndContractTypeMin() {
+        when(employeRepository.min(1L, ContractType.CDI.name())).thenReturn(BigDecimal.valueOf(2000));
+        BigDecimal salary = employeService.getSalaryByEntrepriseIdAndContractType(1L, ContractType.CDI.name(), "min");
         assertEquals(BigDecimal.valueOf(2000), salary);
     }
 
     @Test
-    void testGetSalaryByEntrepriseIdAndContractType_max() {
-        when(employeRepository.max(1L, "CDI")).thenReturn(BigDecimal.valueOf(5000));
-
-        BigDecimal salary = employeService.getSalaryByEntrepriseIdAndContractType(1L, "CDI", "max");
-
+    void testGetSalaryByEntrepriseIdAndContractTypeMax() {
+        when(employeRepository.max(1L, ContractType.CDI.name())).thenReturn(BigDecimal.valueOf(5000));
+        BigDecimal salary = employeService.getSalaryByEntrepriseIdAndContractType(1L, ContractType.CDI.name(), "max");
         assertEquals(BigDecimal.valueOf(5000), salary);
     }
 
     @Test
-    void testGetSalaryByEntrepriseIdAndContractType_moyen() {
-        when(employeRepository.moyen(1L, "CDI")).thenReturn(BigDecimal.valueOf(3000));
+    void testCreateEmployeInvalidSalary() {
+        employe.setSalary(BigDecimal.valueOf(-500));
+        assertThrows(ValidationException.class, () -> employeService.createEmploye(1L, employe));
+    }
 
-        BigDecimal salary = employeService.getSalaryByEntrepriseIdAndContractType(1L, "CDI", "moy");
-
+    @Test
+    void testGetSalaryByEntrepriseIdAndContractTypeMoyen() {
+        when(employeRepository.moyen(1L, ContractType.CDI.name())).thenReturn(BigDecimal.valueOf(3000));
+        BigDecimal salary = employeService.getSalaryByEntrepriseIdAndContractType(1L, ContractType.CDI.name(), "moy");
         assertEquals(BigDecimal.valueOf(3000), salary);
     }
 
     @Test
     void testFilterEmployes() {
         when(employeRepository.filterEmployes("John")).thenReturn(List.of(employe));
-
         List<Employe> result = employeService.filterEmployes("John");
-
         assertEquals(1, result.size());
     }
 }
